trunk/Archive2/74/989123cb4bdbc6/output
main.cpp:1:5: error: definition of variable with array type needs an explicit size or an initializer
int a[][1];
    ^
1 error generated.
